--- a/src/app/series/series-list/series-list.component.html
+++ b/src/app/series/series-list/series-list.component.html
@@ -1,17 +1,44 @@
+<div class="app-series-detail-container" *ngIf="selected">
+  <app-series-detail  [serieDetail]="selectedSerie"> </app-series-detail>
+ </div>
+ 
+ <hr />
+ 
+
+
 <div class="container-fluid">
-  <div class="row">
-    <div class="col mb-2" *ngFor="let serie of series">
-      <div class="card p-2" style="width: 15rem; height: 33rem">
-        <img
-          class="card-img-top"
-          src="{{ serie.poster}}"
-          alt="{{ serie.name }}"
-        />
-        <div class="card-body">
-          <h5 class="card-title">{{ serie.name }}</h5>
-          <p class="card-text">[{{ serie.channel }}]</p>
-        </div>
-      </div>
+  <div class="col-6">
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="h4">ID</th>
+          <th class="h4">Series Name</th>
+          <th class="h4">Channel</th>
+          <th class="h4">Seasons</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let c of series">
+          <td>
+            <dd>{{c.id}}</dd>
+          </td>
+          <td  (click)="onSelected(c)">
+            <dd class="link-like"> {{ c.name }} </dd>
+          </td>
+          <td>
+            <dd>{{c.channel}}</dd>
+          </td>
+          <td>
+            <dd>{{c.seasons}}</dd>
+          </td>
+      </tr>
+      </tbody>
+    </table>
+
+    <div class="text-center">
+      <h5>Promedio de temporadas: {{ totalTemporadas }}</h5>
     </div>
+
+    
   </div>
 </div>
